# h26xcodec

./: .gitmodules  CMakeLists.txt  README.md  testcase.json
CMake/: Findnlohmann_json.cmake
include/h26xcodec/: converter.hpp  extractor.hpp  h26xdecoder.hpp  h26xencoder.hpp  h26xexceptions.hpp  video_reader.hpp
src/: converter.cpp  extractor.cpp  h26xdecoder.cpp  h26xencoder.cpp  main.cpp  video_reader.cpp
